Proyecto final borrador 2

--- a/Practica-8/home.html
+++ b/Practica-8/home.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 
-    <h1>Food Fast!!!</h1>
+    <h1>Museos de la CDMX</h1>
 
-    <section class="food-container">
+    <section class="museo-container">
         <section class="description-container">
-            <h2>Branko</h2>
-            <p>Descubre nuestro platillo principal</p>
+            <h2>Museo Soumaya</h2>
+            <p>Comparte tu experiencia, tips y opiniones</p>
         </section>
-        <img src="https://images.pexels.com/photos/2673353/pexels-photo-2673353.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+        <img src="https://images.pexels.com/photos/18491185/pexels-photo-18491185/free-photo-of-soumaya-museum-in-mexico-city-at-night.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="" >
     </section>
     
     <section class="comment-container">
