--- a/Practica-8/index.html
+++ b/Practica-8/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Neslids</title>
+    <title>Inicio de Sesión</title>
 </head>
 <body>
 
@@ -24,7 +24,9 @@
             </section>
         </section>
 
-        <section class="image-container"></section>
+        <section class="image-container">
+
+        </section>
     </section>
     <script src="script.js"></script>
 </body>
