--- a/Practica-8/home.html
+++ b/Practica-8/home.html
@@ -24,7 +24,9 @@
         <textarea placeholder="Publica un comentario" id="comment"></textarea>
         <button onclick="postComment()">Publicar</button>
 
-        <section id="comment-section"></section>
+        <section id="comment-section">
+        </section>
+        
     </section>
 
     <script src="home.js"></script>
